selection with antlr